--- a/404.html
+++ b/404.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://vider.ga">
+        <meta http-equiv="refresh" content="0; url=https://vilog.me">
         <script type="text/javascript">
-            window.location.href = "https://vider.ga";
+            window.location.href = "https://vilog.me";
         </script>
         <title>Vider</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow the <a href='https://vider.ga'>link</a>
+        If you are not redirected automatically, follow the <a href='https://vilog.me'>link</a>
     </body>
 </html>
